--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -120,6 +120,10 @@
     <!-- CommunicationActions -->
     <string name="CommunicationActions_no_browser_found">No web browser found.</string>
     <string name="CommunicationActions_a_cellular_call_is_already_in_progress">A cellular call is already in progress.</string>
+    <string name="CommunicationActions_start_video_call">Start video call?</string>
+    <string name="CommunicationActions_start_voice_call">Start voice call?</string>
+    <string name="CommunicationActions_cancel">Cancel</string>
+    <string name="CommunicationActions_call">Call</string>
 
     <!-- ConfirmIdentityDialog -->
     <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Your safety number with %1$s has changed. This could either mean that someone is trying to intercept your communication, or that %2$s simply reinstalled Signal.</string>
@@ -1453,6 +1457,7 @@
 
     <!-- conversation_callable_secure -->
     <string name="conversation_callable_secure__menu_call">Signal call</string>
+    <string name="conversation_callable_secure__menu_video">Signal video call</string>
 
     <!-- conversation_context -->
     <string name="conversation_context__menu_message_details">Message details</string>
